@@ -202,6 +202,7 @@ namespace libtorrent
 			, increase_est_reciprocation_rate(20)
 			, decrease_est_reciprocation_rate(3)
 			, incoming_starts_queued_torrents(false)
+			, report_true_downloaded(false)
 		{}
 
 		// this is the user agent that will be sent to the tracker
@@ -762,6 +763,12 @@ namespace libtorrent
 		// if set to true, an incoming connection to a torrent that's
 		// paused and auto-managed will make the torrent start.
 		bool incoming_starts_queued_torrents;
+
+		// when set to true, the downloaded counter sent to trackers
+		// will include the actual number of payload bytes donwnloaded
+		// including redundant bytes. If set to false, it will not include
+		// any redundany bytes
+		bool report_true_downloaded;
 	};
 
 #ifndef TORRENT_DISABLE_DHT
